--- a/SimpleSearch/SimpleSearch.nuspec
+++ b/SimpleSearch/SimpleSearch.nuspec
@@ -7,7 +7,7 @@
     <owners>Anthony Halliday</owners>
     <licenseUrl>https://github.com/anth12/SimpleSearch.net/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/anth12/SimpleSearch.net</projectUrl>
-    <iconUrl>https://github.com/anth12/SimpleSearch.net/blob/master/logo.png</iconUrl>
+    <iconUrl>https://github.com/anth12/SimpleSearch.net/raw/master/logo.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Simple InMemory ranked search</description>
     <releaseNotes>Initial release</releaseNotes>
