--- a/SimpleSearch.Tests/SimpleSearch.Tests.csproj
+++ b/SimpleSearch.Tests/SimpleSearch.Tests.csproj
@@ -52,8 +52,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Airport.cs" />
-    <Compile Include="SampleClass.cs" />
+    <Compile Include="Models\Airport.cs" />
+    <Compile Include="IndexerTests.cs" />
+    <Compile Include="Mock.cs" />
+    <Compile Include="Models\SampleClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AirportSearchTests.cs" />
   </ItemGroup>
