--- a/SimpleSearch/SimpleSearch.csproj
+++ b/SimpleSearch/SimpleSearch.csproj
@@ -41,9 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions.cs" />
+    <Compile Include="Index\InMemoryIndex.cs" />
+    <Compile Include="Index\PersistedIndex.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RankedResult.cs" />
-    <Compile Include="SearchIndex.cs" />
+    <Compile Include="Index\SearchIndex.cs" />
     <Compile Include="SearchIndexer.cs" />
     <Compile Include="SearchIndexOptions.cs" />
     <Compile Include="SearchItem.cs" />
